--- a/cass/cassia-app.html
+++ b/cass/cassia-app.html
@@ -20,30 +20,25 @@
     <div id="content" class="hidden max-w-2xl mx-auto pb-20 animate-fade">
         <header class="text-center my-10">
             <h1 class="text-5xl font-black gradient-text mb-2">CÁSSIA PROMPT</h1>
-            <p class="text-slate-500 tracking-widest text-[10px] uppercase font-bold text-center">A Elite da Inteligência Artificial • Engenharia de Alta Performance</p>
+            <p class="text-slate-500 tracking-widest text-[10px] uppercase font-bold text-center">Engenharia de Prompts de Alta Performance</p>
         </header>
 
         <div class="glass p-8 rounded-[2.5rem] shadow-2xl space-y-8 mb-10">
             
             <div class="space-y-4">
-                <h2 class="text-xl font-bold flex items-center gap-2 text-pink-500">⚙️ Configurações do Cérebro IA</h2>
+                <h2 class="text-xl font-bold flex items-center gap-2 text-pink-500">⚙️ Configurações</h2>
                 <div class="grid grid-cols-2 gap-6">
                     <div>
-                        <label class="text-[10px] font-bold text-slate-400 uppercase">Estilo da Resposta</label>
+                        <label class="text-[10px] font-bold text-slate-400 uppercase">Tom de Voz</label>
                         <select id="tom" class="w-full bg-slate-800 border border-slate-700 p-3 rounded-xl mt-1 text-sm text-white focus:border-pink-500 outline-none">
-                            <option value="Profissional e Técnico">Profissional e Técnico</option>
-                            <option value="Persuasivo e Vendedor">Persuasivo e Vendedor</option>
-                            <option value="Amigável e Casual">Amigável e Casual</option>
-                            <option value="Sério e Autoritário">Sério e Autoritário</option>
+                            <option value="Profissional e Técnico">Profissional</option>
+                            <option value="Persuasivo e Vendedor">Persuasivo</option>
+                            <option value="Amigável e Casual">Amigável</option>
                         </select>
                     </div>
                     <div>
-                        <label class="text-[10px] font-bold text-slate-400 uppercase">Nível de Criatividade</label>
+                        <label class="text-[10px] font-bold text-slate-400 uppercase">Criatividade</label>
                         <input type="range" id="criatividade" min="1" max="10" value="7" class="w-full mt-4">
-                        <div class="flex justify-between text-[9px] text-slate-500 uppercase mt-1">
-                            <span>Factual</span>
-                            <span>Criativo</span>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -51,123 +46,67 @@
             <hr class="border-slate-800">
 
             <div class="space-y-4 bg-blue-500/5 p-6 rounded-3xl border border-blue-500/20">
-                <h2 class="text-xl font-bold text-blue-400 flex items-center gap-2">📱 Mensagens Profissionais</h2>
-                <div class="grid grid-cols-1 gap-4">
-                    <div>
-                        <label class="text-[10px] font-bold text-slate-400 uppercase">O que deseja criar?</label>
-                        <select id="tipoCom" class="w-full bg-slate-800 border border-slate-700 p-3 rounded-xl mt-1 text-sm text-white">
-                            <option value="WhatsApp de Venda Direta">WhatsApp de Venda</option>
-                            <option value="WhatsApp de Boas-vindas">WhatsApp de Boas-vindas</option>
-                            <option value="E-mail de Apresentação de Serviço">E-mail de Apresentação</option>
-                            <option value="E-mail de Cobrança Elegante">E-mail de Cobrança</option>
-                            <option value="Script de Resposta para Críticas/Dúvidas">Gestão de Crise/Dúvidas</option>
-                        </select>
-                    </div>
-                    <div>
-                        <label class="text-[10px] font-bold text-slate-400 uppercase">Para quem você está enviando?</label>
-                        <input type="text" id="destinoCom" placeholder="Ex: Cliente novo, Empresa X, Paciente..." class="w-full bg-slate-800 p-3 rounded-xl mt-1 text-sm border border-slate-700 outline-none focus:border-blue-400">
-                    </div>
-                    <div>
-                        <label class="text-[10px] font-bold text-slate-400 uppercase">Assunto Principal</label>
-                        <input type="text" id="assuntoCom" placeholder="Ex: Venda de Mentoria, Agendamento..." class="w-full bg-slate-800 p-3 rounded-xl mt-1 text-sm border border-slate-700 outline-none focus:border-blue-400">
-                    </div>
+                <h2 class="text-xl font-bold text-blue-400 flex items-center gap-2">📱 WhatsApp & E-mail</h2>
+                <div class="space-y-4">
+                    <select id="tipoCom" class="w-full bg-slate-800 border border-slate-700 p-3 rounded-xl text-sm text-white">
+                        <option value="WhatsApp de Venda Direta">WhatsApp de Venda</option>
+                        <option value="WhatsApp de Boas-vindas">WhatsApp de Boas-vindas</option>
+                        <option value="E-mail de Apresentação">E-mail de Apresentação</option>
+                        <option value="E-mail de Cobrança Elegante">E-mail de Cobrança</option>
+                    </select>
+                    <input type="text" id="destinoCom" placeholder="Para quem é? (Ex: Cliente novo)" class="w-full bg-slate-800 p-3 rounded-xl text-sm border border-slate-700 outline-none">
+                    <input type="text" id="assuntoCom" placeholder="Assunto (Ex: Assinatura de contrato)" class="w-full bg-slate-800 p-3 rounded-xl text-sm border border-slate-700 outline-none">
                 </div>
-                <button onclick="gerarComunicacao()" class="w-full bg-blue-600 hover:bg-blue-700 p-4 rounded-2xl font-black uppercase text-xs tracking-widest transition-all">Gerar Script Perfeito ⚡</button>
+                <button onclick="gerarComunicacao()" class="w-full bg-blue-600 p-4 rounded-2xl font-black uppercase text-xs">Gerar Script ⚡</button>
             </div>
 
-            <hr class="border-slate-800">
-
             <div class="space-y-4">
-                <h2 class="text-xl font-bold text-purple-400 italic">✍️ Consultoria Especializada</h2>
-                <div>
-                    <label class="text-[10px] font-bold text-slate-400 uppercase">Especialista Desejado</label>
-                    <input type="text" id="nicho" placeholder="Ex: Advogado Imobiliário, Nutricionista..." class="w-full bg-slate-800 p-4 rounded-2xl mt-1 border border-slate-700 outline-none focus:border-purple-500">
-                </div>
-                <div>
-                    <label class="text-[10px] font-bold text-slate-400 uppercase">Descreva a Situação / Problema</label>
-                    <textarea id="problema" placeholder="Explique os detalhes do caso ou o que você precisa..." class="w-full bg-slate-800 p-4 rounded-2xl mt-1 h-24 border border-slate-700 outline-none focus:border-purple-500 resize-none"></textarea>
-                </div>
-                <button onclick="gerarMegaPrompt()" class="w-full bg-gradient-to-r from-purple-600 to-pink-600 p-5 rounded-2xl font-black text-lg uppercase shadow-xl hover:scale-[1.01] transition-all">Gerar Prompt de Elite ✨</button>
+                <h2 class="text-xl font-bold text-purple-400 italic">✍️ Consultoria Expert</h2>
+                <input type="text" id="nicho" placeholder="Nicho (Ex: Advogado Imobiliário)" class="w-full bg-slate-800 p-4 rounded-2xl border border-slate-700 outline-none">
+                <textarea id="problema" placeholder="Descreva o problema ou objetivo aqui..." class="w-full bg-slate-800 p-4 rounded-2xl h-24 border border-slate-700 outline-none resize-none"></textarea>
+                <button onclick="gerarMegaPrompt()" class="w-full bg-gradient-to-r from-purple-600 to-pink-600 p-5 rounded-2xl font-black text-lg uppercase shadow-xl">Gerar Prompt de Elite ✨</button>
             </div>
         </div>
 
         <div id="resultadoArea" class="hidden mt-10">
-            <div class="bg-white rounded-[2.5rem] p-8 shadow-[0_20px_60px_rgba(0,0,0,0.4)] border-4 border-purple-500">
-                <p class="text-purple-900 font-black text-[10px] mb-3 italic tracking-[0.2em] text-center">RESULTADO PROCESSADO POR CÁSSIA PROMPT</p>
-                <textarea id="promptFinal" class="w-full h-64 bg-slate-100 p-5 rounded-2xl text-slate-900 font-semibold text-sm border-none focus:outline-none resize-none shadow-inner leading-relaxed"></textarea>
-                <button onclick="copyPrompt()" class="w-full mt-6 bg-slate-900 text-white p-5 rounded-2xl font-black text-xl hover:bg-black transition-all shadow-lg active:scale-95">📋 COPIAR E DOMINAR A IA</button>
+            <div class="bg-white rounded-[2.5rem] p-8 shadow-2xl border-4 border-purple-500">
+                <textarea id="promptFinal" class="w-full h-64 bg-slate-100 p-5 rounded-2xl text-slate-900 font-semibold text-sm border-none focus:outline-none resize-none"></textarea>
+                <button onclick="copyPrompt()" class="w-full mt-6 bg-slate-900 text-white p-5 rounded-2xl font-black text-xl hover:bg-black transition-all shadow-lg">📋 COPIAR PROMPT</button>
             </div>
         </div>
     </div>
 
     <div id="error" class="text-center mt-48">
-        <h1 class="text-4xl font-black text-red-600 uppercase tracking-tighter mb-2">Acesso Negado</h1>
-        <p class="text-slate-500 font-bold">Por favor, utilize seu link oficial com token.</p>
+        <h1 class="text-4xl font-black text-red-600 uppercase mb-2">Acesso Negado</h1>
+        <p class="text-slate-500 font-bold">Peça seu link oficial para a Cássia.</p>
     </div>
 
     <script>
-        // VALIDAÇÃO DE TOKEN
+        // Lógica de Segurança por Token
+        const tokensSalvos = JSON.parse(localStorage.getItem('tokensCassia')) || ['access-cassia-2026'];
         const urlParams = new URLSearchParams(window.location.search);
-        if (urlParams.get('token') === 'access-cassia-2026') {
+        const tokenUsuario = urlParams.get('token');
+
+        if (tokensSalvos.includes(tokenUsuario)) {
             document.getElementById('content').classList.remove('hidden');
             document.getElementById('error').classList.add('hidden');
         }
 
         function mostrar(t) {
-            const assinatura = "\n\n--- \nGerado por Cássia Prompt";
-            document.getElementById('promptFinal').value = t + assinatura;
+            document.getElementById('promptFinal').value = t + "\n\n--- \nGerado por Cássia Prompt";
             document.getElementById('resultadoArea').classList.remove('hidden');
             window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
         }
 
-        // GERADOR DE COMUNICAÇÃO (EMAIL/WHATS)
         function gerarComunicacao() {
             const tipo = document.getElementById('tipoCom').value;
             const destino = document.getElementById('destinoCom').value || "Cliente";
             const assunto = document.getElementById('assuntoCom').value || "nosso serviço";
-            const tom = document.getElementById('tom').value;
-
-            const p = `[ESTRATEGISTA DE COMUNICAÇÃO DIGITAL]
-PERSONA: Você é um Copywriter Sênior especialista em conversão.
-TAREFA: Escreva um ${tipo} para ${destino}.
-CONTEÚDO: O assunto é ${assunto}.
-TOM DE VOZ: ${tom}.
-
-DIRETRIZES:
-1. Use técnicas de rapport para gerar conexão imediata.
-2. Se for WhatsApp, use quebras de linha e emojis moderados para facilitar a leitura no celular.
-3. Se for E-mail, crie uma linha de assunto atraente.
-4. Inclua um Call to Action (Chamada para ação) clara ao final.
-5. NÃO invente dados pessoais (deixe campos como [TELEFONE] para eu preencher).`;
+            const p = `Atue como Copywriter Sênior. Escreva um ${tipo} para ${destino} sobre ${assunto}. Tom: ${document.getElementById('tom').value}. Use emojis se for WhatsApp.`;
             mostrar(p);
         }
 
-        // GERADOR MEGA PROMPT (EXPERT)
         function gerarMegaPrompt() {
-            const nicho = document.getElementById('nicho').value || "Especialista";
-            const problema = document.getElementById('problema').value || "executar tarefa técnica";
-            const tom = document.getElementById('tom').value;
-            const criatividade = document.getElementById('criatividade').value;
-
-            const p = `[SISTEMA DE ALTA CAPACIDADE - CÁSSIA PROMPT]
-PERSONA: Atue como um(a) ${nicho} de elite, referência mundial no assunto.
-DEMANDA: ${problema}.
-PARÂMETROS: Nível de Criatividade ${criatividade}/10 | Tom de voz ${tom}.
-
-REGRAS DE OURO:
-1. NÃO invente fatos, leis ou dados. Seja 100% técnico e factual.
-2. Forneça uma solução profunda, analisando riscos e benefícios.
-3. Se a informação for insuficiente, peça os dados necessários em vez de alucinar.
-4. Estruture a resposta de forma lógica e profissional.`;
-            mostrar(p);
-        }
-
-        function copyPrompt() {
-            const cp = document.getElementById("promptFinal");
-            cp.select();
-            document.execCommand("copy");
-            alert("🚀 Prompt de Elite Copiado!");
-        }
-    </script>
-</body>
-</html>
+            const nicho = document.getElementById('nicho').value || "Expert";
+            const problema = document.getElementById('problema').value || "ajuda técnica";
+            const p = `Atue como um ${nicho} com 20 anos de experiência. Resolva isso: ${problema}. Use criatividade nível ${document.getElementById('criatividade').value}/10. NÃO INVENTE D
