--- a/cass/cassia-app.html
+++ b/cass/cassia-app.html
@@ -15,13 +15,14 @@
 </head>
 <body class="text-slate-200 p-4">
 
-    <div id="content" class="hidden max-w-2xl mx-auto pb-20">
+    <div id="content" style="display: none;" class="max-w-2xl mx-auto pb-20">
         <header class="text-center my-10">
             <h1 class="text-5xl font-black gradient-text mb-2">CÁSSIA PROMPT</h1>
             <p class="text-slate-500 tracking-widest text-[10px] uppercase font-bold text-center">Engenharia de Prompts de Alta Performance</p>
         </header>
 
         <div class="glass p-8 rounded-[2.5rem] shadow-2xl space-y-8 mb-10">
+            
             <div class="space-y-4">
                 <h2 class="text-xl font-bold flex items-center gap-2 text-pink-500">⚙️ Configurações</h2>
                 <div class="grid grid-cols-2 gap-6">
@@ -65,7 +66,7 @@
             </div>
         </div>
 
-        <div id="resultadoArea" class="hidden mt-10">
+        <div id="resultadoArea" style="display: none;" class="mt-10">
             <div class="bg-white rounded-[2.5rem] p-8 shadow-2xl border-4 border-purple-500">
                 <textarea id="promptFinal" class="w-full h-64 bg-slate-100 p-5 rounded-2xl text-slate-900 font-semibold text-sm border-none focus:outline-none resize-none"></textarea>
                 <button onclick="copyPrompt()" class="w-full mt-6 bg-slate-900 text-white p-5 rounded-2xl font-black text-xl hover:bg-black transition-all shadow-lg">📋 COPIAR PROMPT</button>
@@ -73,13 +74,13 @@
         </div>
     </div>
 
-    <div id="error" class="text-center mt-48">
+    <div id="error" style="display: none;" class="text-center mt-48">
         <h1 class="text-4xl font-black text-red-600 uppercase mb-2">Acesso Negado</h1>
-        <p class="text-slate-500 font-bold">Peça seu link oficial para a Cássia.</p>
+        <p class="text-slate-500 font-bold">Token inválido ou expirado. Peça seu link para a Cássia.</p>
     </div>
 
     <script>
-        // 🎫 LISTA DE ACESSO (Edite aqui para adicionar ou remover pessoas)
+        // 🎫 LISTA DE ACESSO (O Antônio deixou os nomes aqui embaixo)
         const tokensValidos = [
             'access-cassia-2026', 
             'instagram-promo', 
@@ -87,17 +88,27 @@
             'cliente-especial'
         ];
 
-        const urlParams = new URLSearchParams(window.location.search);
-        const tokenUsuario = urlParams.get('token');
+        // FUNÇÃO DE VALIDAÇÃO IMEDIATA
+        function validarAcesso() {
+            const params = new URLSearchParams(window.location.search);
+            const token = params.get('token');
 
-        if (tokensValidos.includes(tokenUsuario)) {
-            document.getElementById('content').classList.remove('hidden');
-            document.getElementById('error').classList.add('hidden');
+            if (tokensValidos.includes(token)) {
+                document.getElementById('content').style.display = 'block';
+                document.getElementById('error').style.display = 'none';
+            } else {
+                document.getElementById('content').style.display = 'none';
+                document.getElementById('error').style.display = 'block';
+            }
         }
 
+        // Roda a validação assim que carregar o script
+        validarAcesso();
+
+        // FUNÇÕES DO APP
         function mostrar(t) {
             document.getElementById('promptFinal').value = t + "\n\n--- \nGerado por Cássia Prompt";
-            document.getElementById('resultadoArea').classList.remove('hidden');
+            document.getElementById('resultadoArea').style.display = 'block';
             window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
         }
 
@@ -105,15 +116,15 @@
             const tipo = document.getElementById('tipoCom').value;
             const destino = document.getElementById('destinoCom').value || "Cliente";
             const assunto = document.getElementById('assuntoCom').value || "serviço";
-            const tom = document.getElementById('tom').value;
-            const p = `Atue como Copywriter Sênior. Escreva um ${tipo} para ${destino} sobre ${assunto}. Tom: ${tom}. Use quebras de linha e emojis se for WhatsApp.`;
+            const p = `Atue como Copywriter Sênior. Escreva um ${tipo} para ${destino} sobre ${assunto}. Tom: ${document.getElementById('tom').value}. Use quebras de linha e emojis.`;
             mostrar(p);
         }
 
         function gerarMegaPrompt() {
             const nicho = document.getElementById('nicho').value || "Expert";
-            const problema = document.getElementById('problema').value || "tarefa técnica";
-            const p = `Atue como um ${nicho} com 20 anos de experiência. Resolva isso: ${problema}. Use criatividade nível ${document.getElementById('criatividade').value}/10. NÃO INVENTE DADOS FALSOS.`;
+            const problema = document.getElementById('problema').value || "ajuda";
+            const criatividade = document.getElementById('criatividade').value;
+            const p = `Atue como um ${nicho} de elite. Resolva isso: ${problema}. Nível de Criatividade: ${criatividade}/10. Resposta técnica e profunda.`;
             mostrar(p);
         }
 
@@ -121,7 +132,7 @@
             const cp = document.getElementById("promptFinal");
             cp.select();
             document.execCommand("copy");
-            alert("🚀 Copiado!");
+            alert("🚀 Prompt Copiado!");
         }
     </script>
 </body>
