--- a/cass/cassia-app.html
+++ b/cass/cassia-app.html
@@ -11,31 +11,33 @@
         .glass { background: rgba(255, 255, 255, 0.03); backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.1); }
         .gradient-text { background: linear-gradient(90deg, #c084fc, #db2777, #f43f5e); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
         input[type="range"] { accent-color: #db2777; }
+        .animate-fade { animation: fadeIn 0.5s ease-in; }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
     </style>
 </head>
 <body class="text-slate-200 p-4">
 
-    <div id="content" style="display: none;" class="max-w-2xl mx-auto pb-20">
+    <div id="content" class="hidden max-w-2xl mx-auto pb-20 animate-fade">
         <header class="text-center my-10">
             <h1 class="text-5xl font-black gradient-text mb-2">CÁSSIA PROMPT</h1>
-            <p class="text-slate-500 tracking-widest text-[10px] uppercase font-bold text-center">Engenharia de Prompts de Alta Performance</p>
+            <p class="text-slate-500 tracking-widest text-[10px] uppercase font-bold text-center">A Elite da Inteligência Artificial • Engenharia de Alta Performance</p>
         </header>
 
         <div class="glass p-8 rounded-[2.5rem] shadow-2xl space-y-8 mb-10">
             
             <div class="space-y-4">
-                <h2 class="text-xl font-bold flex items-center gap-2 text-pink-500">⚙️ Configurações</h2>
+                <h2 class="text-xl font-bold flex items-center gap-2 text-pink-500">⚙️ Configurações do Cérebro IA</h2>
                 <div class="grid grid-cols-2 gap-6">
                     <div>
-                        <label class="text-[10px] font-bold text-slate-400 uppercase">Tom de Voz</label>
-                        <select id="tom" class="w-full bg-slate-800 border border-slate-700 p-3 rounded-xl mt-1 text-sm text-white outline-none">
-                            <option value="Profissional e Técnico">Profissional</option>
-                            <option value="Persuasivo e Vendedor">Persuasivo</option>
-                            <option value="Amigável e Casual">Amigável</option>
+                        <label class="text-[10px] font-bold text-slate-400 uppercase">Estilo da Resposta</label>
+                        <select id="tom" class="w-full bg-slate-800 border border-slate-700 p-3 rounded-xl mt-1 text-sm text-white focus:border-pink-500 outline-none">
+                            <option value="Profissional e Técnico">Profissional e Técnico</option>
+                            <option value="Persuasivo e Vendedor">Persuasivo e Vendedor</option>
+                            <option value="Amigável e Casual">Amigável e Casual</option>
                         </select>
                     </div>
                     <div>
-                        <label class="text-[10px] font-bold text-slate-400 uppercase">Criatividade</label>
+                        <label class="text-[10px] font-bold text-slate-400 uppercase">Nível de Criatividade</label>
                         <input type="range" id="criatividade" min="1" max="10" value="7" class="w-full mt-4">
                     </div>
                 </div>
@@ -44,29 +46,28 @@
             <hr class="border-slate-800">
 
             <div class="space-y-4 bg-blue-500/5 p-6 rounded-3xl border border-blue-500/20">
-                <h2 class="text-xl font-bold text-blue-400 flex items-center gap-2">📱 WhatsApp & E-mail</h2>
-                <div class="space-y-4">
+                <h2 class="text-xl font-bold text-blue-400 flex items-center gap-2">📱 Mensagens Profissionais</h2>
+                <div class="grid grid-cols-1 gap-4">
                     <select id="tipoCom" class="w-full bg-slate-800 border border-slate-700 p-3 rounded-xl text-sm text-white">
                         <option value="WhatsApp de Venda Direta">WhatsApp de Venda</option>
                         <option value="WhatsApp de Boas-vindas">WhatsApp de Boas-vindas</option>
-                        <option value="E-mail de Apresentação">E-mail de Apresentação</option>
-                        <option value="E-mail de Cobrança Elegante">E-mail de Cobrança</option>
+                        <option value="E-mail de Apresentação de Serviço">E-mail de Apresentação</option>
                     </select>
-                    <input type="text" id="destinoCom" placeholder="Para quem é? (Ex: Cliente novo)" class="w-full bg-slate-800 p-3 rounded-xl text-sm border border-slate-700 outline-none">
-                    <input type="text" id="assuntoCom" placeholder="Assunto (Ex: Mentoria de IA)" class="w-full bg-slate-800 p-3 rounded-xl text-sm border border-slate-700 outline-none">
+                    <input type="text" id="destinoCom" placeholder="Para quem? (Ex: Cliente novo)" class="w-full bg-slate-800 p-3 rounded-xl text-sm border border-slate-700 outline-none">
+                    <input type="text" id="assuntoCom" placeholder="Assunto Principal" class="w-full bg-slate-800 p-3 rounded-xl text-sm border border-slate-700 outline-none">
                 </div>
-                <button onclick="gerarComunicacao()" class="w-full bg-blue-600 p-4 rounded-2xl font-black uppercase text-xs">Gerar Script ⚡</button>
+                <button onclick="gerarComunicacao()" class="w-full bg-blue-600 p-4 rounded-2xl font-black uppercase text-xs">Gerar Script Perfeito ⚡</button>
             </div>
 
             <div class="space-y-4">
-                <h2 class="text-xl font-bold text-purple-400 italic">✍️ Consultoria Expert</h2>
-                <input type="text" id="nicho" placeholder="Nicho (Ex: Advogado Imobiliário)" class="w-full bg-slate-800 p-4 rounded-2xl border border-slate-700 outline-none">
-                <textarea id="problema" placeholder="Descreva o problema ou objetivo aqui..." class="w-full bg-slate-800 p-4 rounded-2xl h-24 border border-slate-700 outline-none resize-none"></textarea>
+                <h2 class="text-xl font-bold text-purple-400 italic">✍️ Consultoria Especializada</h2>
+                <input type="text" id="nicho" placeholder="Ex: Advogado Imobiliário, Nutricionista..." class="w-full bg-slate-800 p-4 rounded-2xl border border-slate-700 outline-none">
+                <textarea id="problema" placeholder="Descreva a situação aqui..." class="w-full bg-slate-800 p-4 rounded-2xl h-24 border border-slate-700 outline-none resize-none"></textarea>
                 <button onclick="gerarMegaPrompt()" class="w-full bg-gradient-to-r from-purple-600 to-pink-600 p-5 rounded-2xl font-black text-lg uppercase shadow-xl">Gerar Prompt de Elite ✨</button>
             </div>
         </div>
 
-        <div id="resultadoArea" style="display: none;" class="mt-10">
+        <div id="resultadoArea" class="hidden mt-10">
             <div class="bg-white rounded-[2.5rem] p-8 shadow-2xl border-4 border-purple-500">
                 <textarea id="promptFinal" class="w-full h-64 bg-slate-100 p-5 rounded-2xl text-slate-900 font-semibold text-sm border-none focus:outline-none resize-none"></textarea>
                 <button onclick="copyPrompt()" class="w-full mt-6 bg-slate-900 text-white p-5 rounded-2xl font-black text-xl hover:bg-black transition-all shadow-lg">📋 COPIAR PROMPT</button>
@@ -74,41 +75,22 @@
         </div>
     </div>
 
-    <div id="error" style="display: none;" class="text-center mt-48">
+    <div id="error" class="text-center mt-48">
         <h1 class="text-4xl font-black text-red-600 uppercase mb-2">Acesso Negado</h1>
-        <p class="text-slate-500 font-bold">Token inválido ou expirado. Peça seu link para a Cássia.</p>
+        <p class="text-slate-500 font-bold">Por favor, utilize seu link oficial com token.</p>
     </div>
 
     <script>
-        // 🎫 LISTA DE ACESSO (O Antônio deixou os nomes aqui embaixo)
-        const tokensValidos = [
-            'access-cassia-2026', 
-            'instagram-promo', 
-            'teste-gratis',
-            'cliente-especial'
-        ];
-
-        // FUNÇÃO DE VALIDAÇÃO IMEDIATA
-        function validarAcesso() {
-            const params = new URLSearchParams(window.location.search);
-            const token = params.get('token');
-
-            if (tokensValidos.includes(token)) {
-                document.getElementById('content').style.display = 'block';
-                document.getElementById('error').style.display = 'none';
-            } else {
-                document.getElementById('content').style.display = 'none';
-                document.getElementById('error').style.display = 'block';
-            }
+        // TOKEN ÚNICO QUE JÁ FUNCIONAVA
+        const urlParams = new URLSearchParams(window.location.search);
+        if (urlParams.get('token') === 'access-cassia-2026') {
+            document.getElementById('content').classList.remove('hidden');
+            document.getElementById('error').classList.add('hidden');
         }
 
-        // Roda a validação assim que carregar o script
-        validarAcesso();
-
-        // FUNÇÕES DO APP
         function mostrar(t) {
             document.getElementById('promptFinal').value = t + "\n\n--- \nGerado por Cássia Prompt";
-            document.getElementById('resultadoArea').style.display = 'block';
+            document.getElementById('resultadoArea').classList.remove('hidden');
             window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
         }
 
@@ -116,15 +98,16 @@
             const tipo = document.getElementById('tipoCom').value;
             const destino = document.getElementById('destinoCom').value || "Cliente";
             const assunto = document.getElementById('assuntoCom').value || "serviço";
-            const p = `Atue como Copywriter Sênior. Escreva um ${tipo} para ${destino} sobre ${assunto}. Tom: ${document.getElementById('tom').value}. Use quebras de linha e emojis.`;
+            const tom = document.getElementById('tom').value;
+            const p = `Atue como Copywriter. Escreva um ${tipo} para ${destino} sobre ${assunto}. Tom: ${tom}.`;
             mostrar(p);
         }
 
         function gerarMegaPrompt() {
-            const nicho = document.getElementById('nicho').value || "Expert";
-            const problema = document.getElementById('problema').value || "ajuda";
+            const nicho = document.getElementById('nicho').value || "Especialista";
+            const problema = document.getElementById('problema').value || "executar tarefa";
             const criatividade = document.getElementById('criatividade').value;
-            const p = `Atue como um ${nicho} de elite. Resolva isso: ${problema}. Nível de Criatividade: ${criatividade}/10. Resposta técnica e profunda.`;
+            const p = `Atue como ${nicho} nível sênior. Problema: ${problema}. Criatividade: ${criatividade}/10. Responda com profundidade técnica.`;
             mostrar(p);
         }
 
